fixing legend and slides overlapping issue

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,13 @@ svg {
   height: 450px !important;
 }
 
+#brand-legend {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  z-index: 10;
+}
+
 #solution-intro-text {
   color: #452779;
   font-size: 24px;
@@ -112,6 +119,8 @@ h5 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  max-height: 200px; 
+  overflow-y: auto;
 }
 
 .dropdown-group {
@@ -151,6 +160,12 @@ h5 {
   font-size: 16pxs;
 }
 
+.slides {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .slides-intro > div > h2 {
   color: rgb(110 92 25 / 94%);
 }
@@ -180,6 +195,17 @@ h5 {
   white-space: nowrap;
 }
 
+#year-selection, #brand-legend {
+  width: 100%;
+  text-align: center;
+}
+
+#brand-legend label {
+  display: block;
+  width: 100%;
+  margin-bottom: 5px;
+}
+
 #yearCheckboxes label {
   color: black;
 }
@@ -192,6 +218,7 @@ h5 {
   width: 100%;
   margin-top: 50px;
   text-align: center;
+  overflow: visible !important;
 }
 
 #legend {
@@ -582,6 +609,8 @@ h5 {
   justify-content: center;
   gap: 30px;
   margin-bottom: 10px;
+  overflow: auto; 
+  max-height: 300px;
 }
 
 #dropdown-container {
@@ -612,6 +641,26 @@ h5 {
   color: black !important;
 }
 
+#brand-legend {
+  min-width: 100%;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  text-align: center;
+}
+
+#brands-legend {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start; 
+  justify-content: center;
+  width: 100%;
+  max-width: 250px; 
+  margin: 0 auto; 
+  flex-direction: column;
+  margin-left: 120px; 
+}
+
 .circle {
   width: 12px;
   height: 12px;
@@ -635,6 +684,8 @@ h5 {
   max-width: 1500px;
   margin: 0 auto;
   text-align: center;
+  overflow: hidden;
+  max-height: 300px;
 }
 
 #bigfoot-svg {
